# project-meridian

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Meridian-Project-Interview-Guide.docx  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
app/: main.py
app/api/: deps.py
app/api/v1/: analysis.py  charts.py  (+7 more)
app/core/: config.py  container.py  control.py  database.py  errors.py  http.py  logging.py
app/models/: __init__.py  actions.py  ai.py  base.py  company.py  fundamentals.py  news.py  price.py  provider_log.py  valuation.py
app/providers/: alpha_vantage.py  base.py  fmp.py  gdelt.py  registry.py  sec_edgar.py  stooq.py  yahoo.py  yahoo_fundamentals.py
app/repositories/: actions.py  ai.py  company.py  fundamentals.py  news.py  prices.py  provider_log.py  valuation.py
app/schemas/: common.py  company.py  prices.py
app/services/: ai_agents.py  analysis.py  financials.py  macro.py  news_service.py  resolution.py  valuation_service.py
app/workers/: celery_app.py
docs/: 01-architecture.md  02-data-sources.md  03-database.md  04-api.md  05-financial-engine.md  06-ai-pipeline.md  07-roadmap.md  08-calculation-reference.md
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
tests/: test_registry.py
tests/api/: test_health.py
tests/unit/: test_beta_source.py  test_classification.py  test_control.py  test_dcf_golden.py  test_domain_analysis.py  test_ebit_series.py  test_quant.py  test_relative_and_factors.py  test_trace.py  test_units.py  test_valuation_caveat.py
(+48 files in other folders)
